<resources>
    <string name="app_name">Rocket Base Project</string>
    <string name="app_name_dev">[DEV] Rocket Base Project</string>

    <string name="loading">Loading…</string>
    <string name="http_error">Whoops, looks like something went wrong.</string>
    <string name="unknown_error">Something else went wrong!</string>
    <string name="connectivity_offline">There is no connectivity available</string>
    <string name="second_fragment">Now you\'re in the second fragment!</string>
    <string name="stock_image">stock image</string>
    <string name="messages">Messages</string>
    <string name="session_end">Your session ended, please re-login.</string>
    <string name="parallax_image">Parallax image</string>

    <!-- Screen titles -->
    <string name="first_screen_title">First Screen</string>
    <string name="second_screen_title">Second Screen</string>
    <string name="messages_screen_title">Messages</string>
    <string name="property_animation_screen_title">Property Animation</string>
    <string name="container_transform_screen_title">Container Transform</string>

    <!--Permissions-->
    <string name="permissions_request">Request Permissions</string>
    <string name="permissions_granted">Permissions granted :)</string>
    <string name="permissions_denied">Permissions denied :(</string>

    <!--Location-->
    <string name="location_request_current">Request Location</string>
    <string name="location_current_address">Your address is %s</string>
    <string name="location_error">Error checking location</string>

    <!--Maps-->
    <string name="maps">Google Maps</string>
    <string name="maps_display">Display Google Maps</string>
    <string name="maps_current_position">You are here!</string>

    <!--Animations-->
    <string name="animations">Animations</string>
    <string name="animation_screen_subtitle">Quick access to animation examples on Android</string>
    <string name="animation_1_title">Lottie Animation</string>
    <string name="animation_2_title">Property Animations</string>
    <string name="animation_3_title">Container Transform Transition</string>
    <string name="animation_1_description">Simple loading animation of a rocket</string>
    <string name="animation_2_description">View property animation examples</string>
    <string name="animation_3_description">Transition that transforms a button into a popup card. A container transform is used here to help inform the user that the popup is connected to the button.</string>
    <string name="setting_up_your_rocket_account">Setting up your Rocket account</string>
    <string name="attribution_lottie_files">Pao Nguyen @LottieFiles</string>
    <string name="property_animation_1_title">Visibility</string>
    <string name="property_animation_2_title">Rotate + Translate</string>
    <string name="property_animation_3_title">Rotate + Translate Indefinitely</string>
    <string name="property_animation_4_title">Rotate Than Color</string>
    <string name="hide">Hide</string>
    <string name="show">Show</string>
    <string name="ball_1">Ball 1</string>
    <string name="ball_2">Ball 2</string>
    <string name="ball_3">Ball 3</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="card_lottie_transition">animation_card_to_account_setup_screen</string>
    <string name="card_property_animation_transition">animation_card_to_property_animation_screen</string>
    <string name="card_container_transition">animation_card_to_container_transform_screen</string>
    <string name="button_info_intro">Click the button below to start container transformation from button to card</string>
    <string name="info_button">Info button</string>

    <!-- Calendar -->
    <string name="calendar">Calendar</string>
    <string name="calendar_permission_not_granted">Calendar Write/Read permissions are needed for this feature</string>
    <string name="calendar_error">Error occurred while manipulating the Calendar</string>

    <!-- Photo -->
    <string name="photo">Photo</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="error_creating_image_file">Error occurred while creating temporary image file for your photo.</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="rocket_insights_logo">Rocket Insights logo</string>
    <string name="login_logo">Login logo</string>
    <string name="welcome_login_message">Welcome to Android Base App</string>

    <!-- Animation Widget -->
    <string name="lottie">Lottie</string>
    <string name="property">Property</string>
    <string name="container">Container</string>

    <!-- Bluetooth -->
    <string name="bluetooth">Bluetooth</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="bluetooth_permission_not_granted">Bluetooth permissions are needed for this feature</string>
    <string name="bluetooth_permissions_denied">Bluetooth permissions were denied</string>
    <string name="bluetooth_not_supported">Bluetooth is not supported in this device</string>
    <string name="bluetooth_off">Bluetooth is off, please enable it for performing any action</string>
    <string name="bluetooth_generic_error">Bluetooth Unknown Error</string>
    <string name="bluetooth_pair">Pair</string>
    <string name="bluetooth_pair_done">Device Paired Successfully</string>
    <string name="bluetooth_unpair">Un-pair</string>
    <string name="bluetooth_unpair_done">Device Un-Paired Successfully</string>
    <string name="bluetooth_search_start">Search Nearby Devices</string>
    <string name="bluetooth_search_stop">Stop Search</string>
    <string name="bluetooth_paired_devices">Paired Devices:</string>
    <string name="bluetooth_near_devices">Near Devices:</string>
    <string name="bluetooth_mac_address">MAC Address: %s</string>
    <string name="bluetooth_unnamed">Unnamed Device</string>

    <!-- Dialog -->
    <string name="dialog">Dsl Dialog</string>
    <string name="dialog_title">Dialog Title</string>
    <string name="dialog_content">Dialog Content</string>

</resources>
