<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:id="@+id/menu_items_group">
        <item
            android:id="@+id/messages_fragment"
            android:title="@string/messages" />
        <item
            android:id="@+id/photo_fragment"
            android:title="@string/take_a_photo" />
        <item
            android:id="@+id/maps_fragment"
            android:title="@string/maps_display" />
        <item
            android:id="@+id/animations_fragment"
            android:title="@string/animations" />
        <item
            android:id="@+id/calendar_fragment"
            android:title="@string/calendar" />
        <item
            android:id="@+id/bluetooth_fragment"
            android:title="@string/bluetooth" />
        <item
            android:id="@+id/dialog"
            android:title="@string/dialog" />
        <item
            android:id="@+id/menu_login"
            android:title="@string/login" />
        <item
            android:id="@+id/menu_logout"
            android:title="@string/logout" />
    </group>
</menu>